# notion-to-word

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
config/: styles.json
notion_to_word/: __init__.py  block_processor.py  cli.py  config.py  converter.py  notion_client.py  word_formatter.py
templates/: README.md
tests/: __init__.py  run_tests.py  test_conversion.py  test_suite.py
